# north_africa_ww2

./: .gitignore  BUILD_SPEC.md  CLAUDE.md  CLEANROOM_BRIEF.md  NOTES.md  README.md  pyproject.toml
arena/: __init__.py  __main__.py  server.py
arena/static/: index.html
content_packs/default/: features.json  map_calibration.json  pack.json  terrain_logic.json
content_packs/og/: pack.json
data/: ai_regions.json  combat_tables.json  deployments.json  graphics.json  master_oob.json  render_model.json  road_masks.json  scenarios.json  schedules.json  strings_table.json  terrain_authentic.json  terrain_logic.json  terrain_map.json  ui_strings.json  unit_mps.json  unit_name_tables.json  unit_symbols.json  units_scenario_battleaxe.json  units_scenario_enter_rommel.json  units_scenario_operation_crusader.json  victory_conditions.json
desert_rats/: __init__.py  ai.py  ai_og.py  board.py  combat.py  data.py  game.py  game_calendar.py  main.py  movement.py  packs.py  reinforce.py  units.py  victory.py  zoc_supply.py
desert_rats/render/: __init__.py  image.py  overview.py  palette.py  screen.py  strings.py  terminal.py
reference/: desert-rats-extraction-workflow.md  desert-rats-mechanics-spec.md  desert_rats_arena.html  desert_rats_board.html  engine-map.md  prospects.md  screenshot_evidence.md
reference/diff_harness/: harness.py
reference/extraction_tools/: derive_unit_mps.py  diff_snapshots.py  digitize_map.py  export_art.py  extract_ai_tables.py  extract_combat_tables.py  (+11 more)
tests/: test_ai.py  test_ai_og.py  test_arena_server.py  test_board.py  test_combat.py  test_data.py  test_game.py  test_game_calendar.py  test_integration.py  test_main.py  test_movement.py  test_packs.py  test_reinforce.py  test_render.py  test_render_image.py  test_render_overview.py  test_replacements.py  test_units.py  test_victory.py  test_zoc_supply.py
tools/: build_default_map.py  build_default_map_image.py  calibrate_map_image.py
(+1 files in other folders)
